--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.5.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
