--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-images-uploading": "^3.1.7",
     "react-modal": "^3.16.1",
     "react-router": "^6.26.1",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-tabs": "^6.0.2",
     "web-vitals": "^2.1.4"
   },
