--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@davzon/react-country-state-city": "^1.0.10",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@ericz1803/react-google-calendar": "^4.3.2",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^5.1.1",
+    "country-state-city": "^3.2.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.5.5",
     "react": "^18.3.1",
