--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.13",
+    "firebase": "^11.0.1",
     "framer-motion": "^11.5.5",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
