new pages complete

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.0.1",
+    "flowbite": "^2.5.2",
     "framer-motion": "^11.5.5",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
