--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@ericz1803/react-google-calendar": "^4.3.2",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@react-oauth/google": "^0.12.1",
