--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "firebase": "^11.0.1",
     "framer-motion": "^11.5.5",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
