--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
+    "react-spinners": "^0.14.1",
     "react-tabs": "^6.0.2",
     "react-timezone-select": "^3.2.8",
     "react-toastify": "^10.0.6",
